--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -61,6 +61,9 @@
   cursor: pointer;
 }
 .main .result {
+  margin: 0 auto;
+  width: 50%;
+  text-align: center;
   font-weight: bold;
   margin-top: 40px;
 }
